Add more suites to tests.